src/test/ui/mismatched_types/method-help-unsatisfied-bound.stderr
error[E0277]: `Foo` doesn't implement `Debug`
  --> $DIR/method-help-unsatisfied-bound.rs:5:7
   |
LL |     a.unwrap();
   |       ^^^^^^ `Foo` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `Foo`
note: required by a bound in `Result::<T, E>::unwrap`
  --> $SRC_DIR/core/src/result.rs:LL:COL
   |
LL |         E: fmt::Debug,
   |            ^^^^^^^^^^ required by this bound in `Result::<T, E>::unwrap`
help: consider annotating `Foo` with `#[derive(Debug)]`
   |
LL | #[derive(Debug)]
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
