src/test/ui/mismatched_types/method-help-unsatisfied-bound.rs
struct Foo;

fn main() {
    let a: Result<(), Foo> = Ok(());
    a.unwrap();
    //~^ ERROR no method named `unwrap` found
}
